<resources>
    <string name="app_name">SuDrives Partner</string>
    <string name="direction_api_key">AIzaSyAVNsvTkS6bt2-q12RgQoL0S9g7o_VbxeQ</string>
    <string name="facebook_app_id" translatable="false">441295239791609</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb441295239791609</string>
    <string name="GPSAlertDialogTitle">GPS setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu" to "To continue, turn on device location</string>
    <string name="settings">Settings</string>
    <string name="no_thanks">No, THANKS</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">SETTINGS</string>
    <string name="error_no_con_msg">No internet connection found, please do check your network settings.</string>
    <string name="error_no_connection">No Internet Connection</string>
    <string name="text_settings">Check Internet Settings</string>
    <string name="text_close">Close</string>
    <string name="error_app_update_required">App Update Required</string>
    <string name="error_hard_update">Current version of the app is no longer supported. Please update new version from Play Store.</string>
    <string name="login">Login</string>
    <string name="error_please_enter_mobile_number">Please enter mobile number</string>
    <string name="error_please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="welcome_to_movecabs">Welcome to SuDrives Partner!</string>
    <string name="welcome">Welcome!</string>
    <string name="by_logging_in_you_are_agreed_to_our">By logging in, you are agreed to our terms of services and privacy policy</string>
    <string name="otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="vehical_number">Vehicle Number</string>
    <string name="upload_driving_licence">Upload Driving License</string>
    <string name="upload_rc">Upload RC</string>
    <string name="register">Register</string>
    <string name="change">Change</string>
    <string name="location">Location</string>
    <string name="OTP_will_be_send_to_this_number_for_verification">OTP will be send to this number for \nverification</string>
    <string name="error_please_enter_first_name">Please enter first name</string>
    <string name="error_please_enter_last_name">Please enter last name</string>
    <string name="error_please_enter_location">Please enter location</string>
    <string name="error_please_select_hear">Please select where does you hear about us?</string>
    <string name="error_why_using_movecabs">Please select Su Drives usage</string>
    <string name="select_hear">I will be using Su Drives for</string>
    <string name="error_please_select_vehicle_type">Please select vehicle type</string>
    <string name="vehicle_type">Select vehicle type</string>
    <string name="select_vehicle_name">Select vehicle name</string>
    <string name="error_please_upload_driving_license">Please upload driving license</string>
    <string name="error_please_upload_rc">Please upload RC</string>
    <string name="error_please_enter_vehicle_no">Please enter vehicle number</string>
    <string name="error_please_enter_valid_vehicle_no">Please enter valid vehicle number</string>
    <string name="error_please_enter_otp">Please enter OTP</string>
    <string name="text_confirmation">Confirmation</string>
    <string name="thank_you_for_registration">Thank you for Registration</string>
    <string name="registration_approval_will_be_sent_on_email">Registration approval will be sent on Mobile Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_live_trip">Live trip</string>
    <string name="nav_history">History</string>
    <string name="nav_collection">Collections</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_report_issue">Report issue</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_traffic_area">Traffic Area</string>
    <string name="nav_document">Documents</string>
    <string name="nac_claim_money">Cashout</string>
    <string name="nav_subs_text">Subscribe</string>
    <string name="title_activity_maps">Map</string>
    <string name="pin_location">Pin Location</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="no_location_data_provided">No location data provider</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid lat lng</string>
    <string name="no_address_found">No address found</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_off_location">Drop Off Location</string>
    <string name="vehical_name">Vehicle Name</string>
    <string name="client_name">Client Name</string>
    <string name="time">Time</string>
    <string name="reach_time">Reach Time</string>
    <string name="bigin_trip">Begin Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="did_you_drop_off_if_yes_please_enter_otp_to_verify">Did you drop-off, If yes please enter OTP to verify?</string>
    <string name="submit">Submit</string>
    <string name="daily_collections">Daily Collections</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="cash">Cash</string>
    <string name="paytm">Paytm</string>
    <string name="c_d_card">C/D Card</string>
    <string name="trip_id">Trip ID</string>
    <string name="total_distance">Total Distance</string>
    <string name="cash_collected">Cash collected</string>
    <string name="movecab_payout">Su Drives Payout</string>
    <string name="save">Save</string>
    <string name="home">Go Home</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="state_name">Select Home Location</string>
    <string name="collect_payment_at_pickup_location"> &#8377; Collect payment at pickup location</string>
    <string name="within">Within</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="to">To:</string>
    <string name="text_booking_id">Trip ID : </string>
    <string name="eta">ETA:</string>
    <string name="total_cost">Total Cost</string>
    <string name="rupee">&#8377;</string>
    <string name="trip_ID">Trip ID</string>
    <string name="select">Select</string>
    <string name="Comments_Questions">Comments / Questions</string>
    <string name="please_explain_your_issue_here">Please explain your issues here...</string>
    <string name="Upload_a_picture">Upload a picture (Optional)</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="truck_type">Truck Type</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="enter_origin">Enter Origin</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="status">Status</string>
    <string name="report_issue">Report Issue</string>
    <string name="call_us">Call Us : </string>
    <string name="email_us">Email Us : </string>
    <string name="website">Website : </string>
    <string name="terms_amp_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="drive_with_us">Drive With Us</string>
    <string name="history">History</string>
    <string name="to_teach_destination">to reach destination</string>
    <string name="default_notification_channel_id">Su Drives</string>
    <string name="any_comment">Comment</string>
    <string name="no_data_found">No data found</string>
    <string name="decline_request_reson">Please select reason</string>
    <string name="online_payment">Online Payment</string>
    <string name="fare_summary">Fare summary</string>
    <string name="decline_request">Decline request</string>
    <string name="business_usage">Business Usage</string>
    <string name="personal_usage">Personal Usage</string>
    <string name="notifications">Notifications</string>
    <string name="update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="street">Street</string>
    <string name="name">Name</string>
    <string name="collect_payment_at_pickup_location_">Collect payment at pickup location</string>
    <string name="discription">description</string>
    <string name="ok">Ok</string>
    <string name="terms_and_condotion"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="message">message</string>
    <string name="user_cancel_booking">User cancel booking</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure, you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">Today |</string>
    <string name="please_fill_email_address">Please fill Email Adrress</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="please_fill_name">Please fill Name</string>
    <string name="_trip">\n Trip</string>
    <string name="_years">\n Years</string>
    <string name="no_booking_found">No Booking Found</string>
    <string name="please_select_reason">Please select Reason</string>
    <string name="please_enter_comment">Please enter Comment </string>
    <string name="accepted">Accepted</string>
    <string name="trip_start">Trip Start</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="processed">Processed</string>
    <string name="pending">Pending</string>
    <string name="trip_time">Trip Time</string>
    <string name="earning_details">Earning Details</string>
    <string name="awesome_movecab">Awesome Su Drives!</string>
    <string name="done">Done</string>
    <string name="earnings">Earnings</string>
    <string name="arrived_at_pickup_location">Arrived at Pickup location</string>
    <string name="trip">Trip</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="month">Monthly</string>
    <string name="all">All</string>
    <string name="donate">Donate</string>
    <string name="reg_consent">This is consent form for third party (Driver) who is going to enroll into multiple categories like mini, micro, sedan, luxary sedan.
    The price will be change as per category.</string>
    <string name="reg_consent_title">Driver Consent</string>
    <string name="reg_consent_check">I accept terms and conditions.</string>
    <string name="health_check_heading">Health check</string>
    <string name="healthcheckdescription">There are three types of health status.</string>
    <string name="greenstatusmean">Green status shows your car health is healthy \nand no need to check up for some time.</string>
    <string name="yellowstatusmean">Yellow status shows you card need to check again \nfrom our nearest center</string>
    <string name="redstatusmean">Red health status mean you missed our warning \nand now you rides will be blocked due to health \ncheckup.</string>
</resources>