<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Divider will appear above this item -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24dp"
            android:title="@string/nav_home" />


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_24dp"
            android:title="@string/nav_profile" />


        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/documents_24dp"
            android:visible="false"
            android:title="@string/nav_document" />


        <!-- <item
             android:id="@+id/nav_accounts"
             android:icon="@drawable/account_24dp"
             android:title="Accounts" />-->

        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/collection_24dp"
            android:title="@string/nav_payment" />


        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_24dp"
            android:title="@string/nav_history" />

        <item
            android:id="@+id/nav_traffic_area"
            android:icon="@drawable/traffic_24dp"
            android:visible="false"
            android:title="@string/nav_traffic_area" />

        <item
            android:id="@+id/report_issue"
            android:icon="@drawable/issue_24dp"
            android:title="@string/report_issue" />


        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact_us_24dp"
            android:title="@string/nav_contact_us" />

        <item
            android:id="@+id/nav_claim_money"
            android:icon="@drawable/ic_claim_money_primary_24dp"
            android:title="@string/nac_claim_money" />

        <item
            android:id="@+id/nav_subs"
            android:icon="@drawable/ic_collaboration"
            android:title="@string/nav_subs_text" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us_24dp"
            android:visible="false"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_24dp"
            android:title="@string/nav_logout" />

    </group>
</menu>
