<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Consent Driver"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textConsentTitle"
        android:text="@string/reg_consent_title"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textConsentDescription"
        android:text="@string/reg_consent"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/textConsentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/quantum_grey"
        />

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/textcheck"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/reg_consent_check"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submitconsent"
        android:background="@drawable/rounded_corner_shape_grey"
        android:text="I agree"
        android:textAllCaps="false"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btn_cancel"
        android:background="@drawable/rounded_corner_shape_red"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"/>

</LinearLayout>